fix side filter checkboxes, add book button styles, fix heartbutton check

--- a/src/components/ListSection/ListItemCard/list-item-card.scss
+++ b/src/components/ListSection/ListItemCard/list-item-card.scss
@@ -114,5 +114,22 @@
             padding: 10px 15px;
             text-transform: uppercase;
         }
+
+        #{$this}__button--enabled {
+            &:hover,
+            &:focus {
+                background-color: $color-hover-purple;
+            }
+
+            &:active {
+                background-color: $color-active-purple;
+            }
+        }
+
+        #{$this}__button--disabled {
+            background-color: $color-grey-2;
+            color: $color-grey-chateau;
+            cursor: default;
+        }
     }
 }
