--- a/src/components/SideFilters/SideFilterCard/FilterOption/filter-option.scss
+++ b/src/components/SideFilters/SideFilterCard/FilterOption/filter-option.scss
@@ -6,7 +6,7 @@
 }
 
 .checkbox {
-    align-items: center;
+    align-items: flex-start;
     display: flex;
     justify-content: flex-start;
     position: relative;
@@ -31,7 +31,7 @@
         left: 3px;
         opacity: 0;
         position: absolute;
-        top: -2px;
+        top: -3px;
         transition: 300ms linear;
     }
 
