--- a/src/components/ListSection/ListItemCard/list-item-card.scss
+++ b/src/components/ListSection/ListItemCard/list-item-card.scss
@@ -132,4 +132,18 @@
             cursor: default;
         }
     }
+
+    @media (max-width: 864px) {
+        flex-direction: column-reverse;
+        padding: 10px;
+
+        &__info {
+            align-items: center;
+        }
+
+        &__interaction {
+            flex-direction: row;
+            margin-bottom: 10px;
+        }
+    }
 }
