SOUR-153-Add functionality to disable slider buttons

--- a/src/components/SliderNavButtons/slider-nav-buttons.scss
+++ b/src/components/SliderNavButtons/slider-nav-buttons.scss
@@ -39,4 +39,17 @@
             }
         }
     }
+
+    &--disabled:hover,
+    &--disabled:focus,
+    &--disabled:active {
+        background: $color-white;
+
+        svg {
+            path {
+                fill: $color-fiord;
+                stroke: $color-white;
+            }
+        }
+    }
 }
