SOUR-139 Move restaurant intro card above the most popular restaurants

--- a/src/components/RestaurantCards/BestRestaurantWrapper/best-restaurant-wrapper.scss
+++ b/src/components/RestaurantCards/BestRestaurantWrapper/best-restaurant-wrapper.scss
@@ -23,8 +23,8 @@
     @media (max-width: $breakpoint-tablet-landscape) {
         column-gap: 0;
         grid-template-areas:
-            'restaurant'
-            'general';
+            'general'
+            'restaurant';
         grid-template-columns: 1fr;
         row-gap: 20px;
 
