--- a/src/components/SearchSection/DatePicker/date-picker.scss
+++ b/src/components/SearchSection/DatePicker/date-picker.scss
@@ -2,6 +2,7 @@
 @import '../../../styles/mixins/mixins';
 $_size-15: 15px;
 $_color-bold: #050504;
+$_size-none: 0;
 
 .wrapper {
     display: flex;
