bug/SOUR-133 nest media queries correctly, change some queries, fix button warning

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -10,6 +10,7 @@
     height: 40px;
     padding: 8px 24px;
     text-transform: uppercase;
+    width: fit-content;
 
     &--enabled {
         &:hover,
