SOUR-153-Nest disabled class status

--- a/src/components/SliderNavButtons/slider-nav-buttons.scss
+++ b/src/components/SliderNavButtons/slider-nav-buttons.scss
@@ -40,13 +40,13 @@
         }
     }
 
-    &--disabled:hover,
-    &--disabled:focus,
-    &--disabled:active {
-        background: $color-white;
+    &--disabled {
+        &:hover,
+        &:focus,
+        &:active {
+            background: $color-white;
 
-        svg {
-            path {
+            svg path {
                 fill: $color-fiord;
                 stroke: $color-white;
             }
