--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -64,7 +64,7 @@
 
     &__title-like {
         @include flex-space-between;
-        padding: 0 16px;
+        padding: 0 23px 0 16px;
     }
 
     &__link {
