--- a/src/pages/ReservationsPage/reservations.scss
+++ b/src/pages/ReservationsPage/reservations.scss
@@ -1,6 +1,16 @@
+@import '../../styles/base/base';
+
 .reservations {
     margin: 0 auto;
     max-width: 1265px;
+
+    &__header {
+        color: $color-fiord;
+        font-size: $size-36;
+        font-weight: $weight-bold;
+        margin: 0 0 24px;
+        text-transform: capitalize;
+    }
 
     &__section {
         display: flex;
