--- a/src/components/RestaurantPageHero/restaurant-page-hero.scss
+++ b/src/components/RestaurantPageHero/restaurant-page-hero.scss
@@ -49,7 +49,7 @@
         position: absolute;
         width: calc(100% - 80px);
 
-        @media (max-width: $breakpoint-tablet) {
+        @media (max-width: 910px) {
             bottom: -12%;
         }
     }
