--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -12,7 +12,7 @@
     }
 
     &__reservations-cards {
-        column-gap: 40px;
+        column-gap: $column-gap-small;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         margin-top: 30px;
@@ -30,7 +30,7 @@
     .dashboard {
         &__reservations-cards {
             align-items: end;
-            column-gap: 40px;
+            column-gap: $column-gap-small;
             margin-top: 40px;
         }
     }
@@ -39,7 +39,7 @@
 @media (max-width: $breakpoint-tablet-landscape) {
     .dashboard {
         &__reservations-cards {
-            column-gap: 20px;
+            column-gap: $column-gap-extra-small;
         }
     }
 }
