SOUR-156 Add new breakpoints to restaurant categories, restaurant section and restaurant carousel

--- a/src/components/RestaurantCategories/restaurant-categories.scss
+++ b/src/components/RestaurantCategories/restaurant-categories.scss
@@ -14,6 +14,10 @@
         padding-top: 60px;
     }
 
+    @media (max-width: $breakpoint-tablet-landscape) {
+        column-gap: $column-gap-extra-small;
+    }
+
     @media (max-width: $breakpoint-tablet) {
         grid-template-columns: repeat(2, 1fr);
         row-gap: $column-gap-small;
