--- a/src/components/RestaurantSections/RestaurantSection/restaurant-section.scss
+++ b/src/components/RestaurantSections/RestaurantSection/restaurant-section.scss
@@ -7,16 +7,18 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-rows: auto;
     position: relative;
-    row-gap: 40px;
+    row-gap: $column-gap-small;
 
-    @media (max-width: $breakpoint-tablet-landscape) {
-        column-gap: 20px;
+    @media (max-width: 1240px) {
         grid-template-columns: repeat(2, minmax(0, 1fr));
-        row-gap: 20px;
     }
 
-    @media (max-width: $breakpoint-tablet) {
+    @media (max-width: $breakpoint-tablet-landscape) {
+        gap: $column-gap-extra-small;
+        row-gap: $column-gap-extra-small;
+    }
+
+    @media (max-width: 900px) {
         grid-template-columns: 1fr;
-        row-gap: 20px;
     }
 }
