--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -28,7 +28,7 @@
         background-color: $color-mercury;
         border-radius: 8px;
         max-height: calc(100vh - 200px);
-        overflow-y: scroll;
+        overflow-y: auto;
         padding: 30px;
         text-align: start;
 
@@ -69,6 +69,11 @@
 
     &__heading {
         @include h3-heading;
+    }
+
+    &__button {
+        display: flex;
+        justify-content: flex-end;
     }
 
     @media (max-width: $breakpoint-tablet-landscape) {
