--- a/src/components/Link/link.scss
+++ b/src/components/Link/link.scss
@@ -9,7 +9,8 @@
     font-weight: $weight-regular;
     height: 40px;
     line-height: 1.7;
-    padding: 8px 16px;
+    margin: 0 8px;
+    padding: 8px 8px;
     text-decoration: none;
     text-transform: uppercase;
 
