--- a/src/components/ListSection/ListItemCard/list-item-card.scss
+++ b/src/components/ListSection/ListItemCard/list-item-card.scss
@@ -120,6 +120,7 @@
         }
 
         &__interaction {
+            align-items: center;
             flex-direction: row;
             margin-bottom: 10px;
         }
