--- a/src/components/SideFilters/SideFilterCard/side-filter-card.scss
+++ b/src/components/SideFilters/SideFilterCard/side-filter-card.scss
@@ -27,5 +27,12 @@
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr;
         }
+
+        @media (max-width: 768px) {
+            column-gap: 10px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr;
+        }
     }
 }
