--- a/src/components/UserProfile/user-profile.scss
+++ b/src/components/UserProfile/user-profile.scss
@@ -44,6 +44,7 @@
         border: 1px solid $color-grey-4;
         border-bottom: transparent;
         border-right: transparent;
+        cursor: pointer;
         height: 5px;
         position: absolute;
         right: 15px;
@@ -74,19 +75,16 @@
         }
     }
 
-    &__item-body {
+    &__item-link {
         align-items: center;
+        color: $color-grey-7;
         display: flex;
-        margin: 15px;
+        padding: 15px;
+        text-decoration: none;
         white-space: nowrap;
     }
 
     &__text {
         margin: 0 0 0 8px;
-
-        a {
-            color: $color-grey-7;
-            text-decoration: none;
-        }
     }
 }
