--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -18,6 +18,7 @@ $color-silver: #c4c4c4;
 $color-slate-grey: #6a7889;
 $color-ghost: #cacfd5;
 $color-iron: #dcdfe3;
+$color-heather: #c2cedb;
 
 $color-blue-dark: #001836;
 $color-grey-8: #627485;
