--- a/src/components/NewsFeedCard/Comments/add-comment.scss
+++ b/src/components/NewsFeedCard/Comments/add-comment.scss
@@ -20,7 +20,7 @@ $transparent: transparent;
         color: $color-grey-7;
         flex: 1;
         font-size: $size-12;
-        line-height: 24px;
+        line-height: 2;
         padding: 5px 10px;
 
         &:focus {
