--- a/src/components/NewsFeedCard/new-post.scss
+++ b/src/components/NewsFeedCard/new-post.scss
@@ -44,10 +44,90 @@
         background-color: $color-white;
         border: 1px solid $color-ghost;
         border-radius: 5px;
-        height: 50px;
+        color: $color-fiord;
+        font-size: $size-14;
+        height: 200px;
+        margin-bottom: 10px;
+        overflow-y: auto;
+        padding: 10px;
+        width: 280px;
 
         &:focus {
             border: 1px solid $color-fiord;
         }
+
+        &:empty::before {
+            color: $color-grey-chateau;
+            content: 'Start writing...';
+        }
+    }
+
+    &__url-input {
+        align-items: center;
+        background: $color-white;
+        border: 1px solid $color-ghost;
+        border-radius: 5px;
+        display: flex;
+        margin-bottom: 10px;
+        padding: 0 5px;
+        position: relative;
+        width: 290px;
+
+        &:focus-within {
+            border-color: $color-fiord;
+        }
+
+        &:hover {
+            border-color: $color-fiord;
+            color: $color-fiord;
+        }
+    }
+
+    &__cancel-button {
+        align-items: center;
+        background: transparent;
+        border: 0;
+        cursor: pointer;
+        display: flex;
+        height: 20px;
+        margin: 0 5px;
+        padding: 0;
+
+        &--hidden {
+            display: none;
+        }
+    }
+
+    &__url-text {
+        border: 0;
+        font-family: $main-font;
+        font-size: $size-14;
+        font-weight: $weight-regular;
+        line-height: 3.1;
+        margin-left: 10px;
+        padding: 0;
+        width: 100%;
+
+        &:focus {
+            outline: 0;
+        }
+    }
+
+    &__headline,
+    &__sub-headline {
+        color: $color-pickled-bluewood;
+        font-weight: 900;
+        line-height: 32px;
+        margin: 20px 0;
+    }
+
+    &__submit-button {
+        &:not(:last-child) {
+            margin-right: 10px;
+        }
+    }
+
+    &__submit-button-wrapper {
+        text-align: right;
     }
 }
