--- a/src/components/NewsFeedCard/news-feed.scss
+++ b/src/components/NewsFeedCard/news-feed.scss
@@ -1,1 +1,8 @@
 @import '../../styles/base/base';
+
+.newsFeed {
+    &__heading {
+        display: flex;
+        justify-content: space-between;
+    }
+}
