--- a/src/components/CategoryCard/category-card.scss
+++ b/src/components/CategoryCard/category-card.scss
@@ -12,6 +12,7 @@
     height: 96px;
     justify-content: center;
     line-height: 1.2;
+    transition: 0.5s ease;
 
     &:hover {
         background: $color-ghost;
