--- a/src/components/SearchSection/TagButton/tag-button.scss
+++ b/src/components/SearchSection/TagButton/tag-button.scss
@@ -15,6 +15,7 @@
     font-weight: $weight-medium;
     margin-right: 12px;
     padding: 5px 10px;
+    transition: 0.5s ease;
 
     &--selected {
         background: $color-fiord;
