change align to heart button

--- a/src/components/ListSection/ListItemCard/list-item-card.scss
+++ b/src/components/ListSection/ListItemCard/list-item-card.scss
@@ -120,7 +120,7 @@
         }
 
         &__interaction {
-            align-items: center;
+            align-items: flex-start;
             flex-direction: row;
             margin-bottom: 10px;
         }
