task/SOUR-183 map label with input, add different shades  when slider button is hovered, active

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -31,6 +31,15 @@
 
     &--slider {
         background-color: $color-red;
+
+        &:hover,
+        &:focus {
+            background-color: $color-red-darker;
+        }
+
+        &:active {
+            background-color: $color-red-darkest;
+        }
     }
 
     &--text {
