--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -31,6 +31,8 @@ $color-grey-2: #edeff1;
 $color-grey-1: #f6f7f8;
 $color-grey-90: #e5e5e5;
 $color-red: #ff6e75;
+$color-red-darker: #e56369;
+$color-red-darkest: #cc585d;
 $color-yellow: #fadb5e;
 
 $color-purple-dark: #6e44ff;
